[tool.poetry]
name = "hashcash-tree"
version = "0.2.5"
description = ""
authors = ["Mario Alviano <mario.alviano@gmail.com>"]
readme = "README.md"
packages = [{include = "hashcash_tree"}]

[tool.poetry.dependencies]
python = "^3.11"
dumbo-utils = "^0.1.9"
numpy = "^1.25.2"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
